syntax = "proto3";

package distributed_leaderboard;

option go_package = "github.com/Rx-11/distributed-leaderboard/proto";

service ReplicationService {
  rpc PublishSummary (RegionSummary) returns (PublishResponse);
}

message PublishResponse {
  bool success = 1;
}

message RegionSummary {
  string region_id = 1;
  string season_id = 2;
  uint64 epoch = 3;
  bool is_final = 4;
  int32 user_count = 5;
  
  TopKSummary top_k = 6;
  HistogramSummary histogram = 7;
}

message TopKSummary {
  uint64 epoch = 1;
  repeated Entry entries = 2;
}

message HistogramSummary {
  uint64 epoch = 1;
  repeated HistogramBucket buckets = 2;
}

message HistogramBucket {
  int64 lower_bound = 1;
  int64 upper_bound = 2;
  int32 count = 3;
}

message Entry {
  string user_id = 1;
  int64 score = 2;
}